test/libyul/yulSyntaxTests/pc.yul
{
    pop(pc())
}
// ====
// dialect: evmTyped
// ----
// TypeError: (10-12): The "pc" instruction is not available in Yul for any VMs (you are currently compiling for "istanbul").
